kubernetes/apps/development/coder/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder-v2
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder-workspace
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
